@@ -1,3 +1,11 @@
+- check that don't have this problem where as.Date() is used inside dateAlign() and dateShift()
+        # To get as.Date() to behave sensibly, need to explicitly
+        # supply tz to as.Date().  Otherwise we get the behavior
+        # where as.Date(as.POSIXct('2011-12-10 19:55:26 EST', tz='EST'))
+        # returns '2011-12-11' (the next day)
+	# Note that as.Date(as.POSIXct('2011-12-10 19:55:26')) also returns the next day
+	# as.Date(as.POSIXlt('2011-12-10 19:55:26'), tz='EST') returns the same day
+
 - add tests for parsing dateWarp() list components like 'N bizdays@HOLIDAYS'
 - make TimeWarp work with date/times:
     make the base function for dateAlign/dateShift use POSIXlt (it already does this inside the function, after converting to Date)
